# rust_movenet

./: Cargo.toml  README2.md  build.rs
src/: main.rs  types.rs  utils.rs
src/client/: app.rs  client_main.rs  mod.rs  server_client.rs
src/client/camera/: bindings.rs  mod.rs
src/original/: mod.rs
src/proto/: dnn_message.proto  mod.rs
src/server/: mod.rs  server_main.rs
