[package]
name = "rust_movenet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opencv = "0.80.0"
tflitec = "0.6.0"
bytes = "1"
prost = "0.13"
prost-types = "0.13"


[build-dependencies]
prost-build = "0.13.3"


[build]
build = "build.rs"

[profile.release]
opt-level = 3