[package]
name = "rust_movenet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opencv = "0.80.0"
tflitec = "0.6.0"
bytes = "1"
prost = "0.13"
prost-types = "0.13"
structopt = "0.3.26"
log = "0.4.22"


[build-dependencies]
prost-build = "0.13.3"

[profile.release]
opt-level = 3