[package]
name = "rust_movenet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opencv = "0.80.0"
tflitec = "0.6.0"
bytes = "1"
prost = "0.13"
prost-types = "0.13"
structopt = "0.3.26"
log = "0.4.22"
nix = { version = "0.29.0", features = ["fs", "ioctl"] }
memmap = "0.7.0"
libc = "0.2.162"
env_logger = "0.11.5"
rayon = "1.10.0"


[build-dependencies]
prost-build = "0.13.3"
bindgen = "0.70.1"

[profile.release]
opt-level = 3